<resources>
    <string name="app_name">Deli</string>




    <string name="main_add_zone">添加区域</string>
    <string name="main_click_choose">点击选择</string>
    <string name="main_a_zone">A区</string>
    <string name="main_b_zone">B区</string>
    <string name="main_c_zone">C区</string>
    <string name="main_d_zone">D区</string>

    <string name="main_plate_up">餐盘(上)</string>
    <string name="main_plate_mid">餐盘(中)</string>
    <string name="main_plate_down">餐盘(下)</string>

    <string name="info_release_estop">请您先松开急停按钮</string>
    <string name="release_estop">松开急停按钮</string>
    <string name="setting_page">设置页面</string>
    <string name="choose_district">请选择要送餐的区域</string>
    <string name="go_delivery_first">我要出发送餐，我正在前往%s区送餐</string>
    <string name="go_delivery">我正在前往%s区送餐</string>
    <string name="go_kitchen">我正在前往厨房</string>
    <string name="arrvive_kitcken">已到达厨房</string>
    <string name="arrvive_marker">%s区餐桌餐来了，请%s餐盘取餐，小心烫</string>


    <string name="please_take_meal">请取餐</string>
    <string name="no_data">空</string>
    <string name="state_cancel">已取消</string>
    <string name="state_complete">已完成</string>
    <string name="state_not_pull">未放置</string>
    <string name="state_not_arrive">未到达</string>




    <string name="layer_warn">警告：不可随意更改，要以实际餐盘托板层数为准</string>
    <string name="layer_4">四层餐盘</string>
    <string name="layer_3">三层餐盘</string>
    <string name="layer_2">两层餐盘</string>
    <string name="layer_1">一层餐盘</string>
    <string name="confirm">确定</string>

    <string name="show_navi_bar">显示标题</string>
    <string name="hide_navi_bar">隐藏标题</string>


    <string name="cacel_task">取消任务</string>
    <string name="not_cacel">不取消</string>
    <string name="hint_cacel_task">机器人当前正在执行任务，是否取消任务?</string>


    <string name="task_go_kichen">回厨房</string>
    <string name="task_delivery">%s区送餐</string>
    <string name="please_choose_task">请选择要取消的任务</string>


    <string name="charging">充电中！！！</string>
    <string name="charging_hint">机器人当前充电中，如果是充电线连接，请手动拔取充电线，以免造成意外。</string>
    <string name="excute_now">执行任务</string>
    <string name="connectinon_error">当前状态未连接，请稍后再试。</string>
</resources>
