<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="@dimen/dp_20"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_15"
        android:text="@string/layer_warn"
        android:textColor="@color/theme_green"
        android:textSize="@dimen/sp_10" />

    <RadioGroup
        android:id="@+id/choose_plies"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_20"
        android:gravity="center_vertical">

        <RadioButton
            android:id="@+id/four_plies"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:paddingLeft="@dimen/dp_3"
            android:text="@string/layer_4"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_10" />

        <RadioButton
            android:id="@+id/three_plies"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:paddingLeft="@dimen/dp_3"
            android:text="@string/layer_3"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_10" />

        <RadioButton
            android:id="@+id/two_plies"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:paddingLeft="@dimen/dp_3"
            android:text="@string/layer_2"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_10" />

        <RadioButton
            android:id="@+id/one_plies"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:paddingLeft="@dimen/dp_3"
            android:text="@string/layer_1"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_10" />
    </RadioGroup>

    <Button
        android:id="@+id/bt_confirm"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_gravity="center_horizontal"
        android:text="@string/confirm"
        android:textSize="@dimen/sp_10"
        android:textColor="@color/black"
        android:background="@drawable/list_checked"/>
</LinearLayout>