<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/dp_20">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/charging"
        android:textColor="@color/theme_green"
        android:textSize="@dimen/sp_14" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0_1"
        android:layout_below="@+id/tv_title"
        android:layout_marginTop="@dimen/dp_4"
        android:background="@color/gray_99" />


    <TextView
        android:id="@+id/tv_content"
        android:layout_width="@dimen/dp_240"
        android:layout_height="@dimen/dp_100"
        android:padding="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_4"
        android:gravity="center"
        android:text="@string/charging_hint"
        android:textColor="@color/gray_33"
        android:textSize="@dimen/sp_10" />



    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="@dimen/dp_260"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/list_checked"
            android:text="@string/cacel_task"
            android:textColor="@color/theme_green"
            android:textSize="@dimen/sp_10" />

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="@dimen/dp_120"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_5"
            android:background="@drawable/list_checked"
            android:text="@string/excute_now"
            android:textColor="@color/gray_66"
            android:textSize="@dimen/sp_10" />
    </LinearLayout>

</LinearLayout>
